# srpc

./: Cargo.toml  LICENSE  Plans.md  README.md
examples/: Cargo.toml  example_client.rs  example_server.rs  server.rs  simple_codec.rs
srpc/: Cargo.toml
srpc-macros/: Cargo.toml
srpc-macros/examples/: example.rs
srpc-macros/src/: lib.rs
srpc/src/: client.rs  json_rpc.rs  lib.rs  protocol.rs  server.rs  simple_codec.rs  transport.rs  utils.rs
srpc/src/client_/: client.rs  mod.rs  simple_codec.rs  transport.rs
srpc/src/json_rpc/: errors.rs  mod.rs  request.rs  response.rs
srpc/src/transport/: mod.rs  reader.rs  simple_codec.rs  transport.rs  writer.rs
