[package]
name = "examples"
version = "0.0.0"
publish = false
edition = "2018"

[dev-dependencies]
env_logger = "0.8"
rand = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
srpc = { version = "0.1", path = "../srpc" }
tokio = { version = "0.3.0", features = ["full"] }

[[example]]
name = "server"
path = "example_server.rs"

[[example]]
name = "client"
path = "example_client.rs"
