[package]
name = "srpc-macros"
version = "0.1.0"
authors = ["aeryz <abdullaheryz@protonmail.com>"]
edition = "2018"

[dependencies]
syn = {version = "1.0"}
quote = "1.0"
proc-macro2 = "0.4.27"

[lib]
proc-macro = true

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
srpc = { version = "0.1", path = "../srpc" }
