[package]
name = "srpc"
version = "0.1.0"
authors = ["aeryz <abdullaheryz@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.3", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
srpc-macros = { version = "0.1", path = "../srpc-macros" }
rand = "0.7.3"
