[package]
name = "srpc"
version = "0.1.0"
authors = ["aeryz <abdullaheryz@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.6"
futures = "0.3.8"
rand = "0.7.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
srpc-macros = { version = "0.1", path = "../srpc-macros" }
# TODO: You propably don't need "full" features
tokio = { version = "0.3", features = ["full"] }
log = "0.4"
